# config-watch

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  project-tree.txt
.github/workflows/: ci.yml  docker-publish.yml  release.yml
crates/config-agent/: Cargo.toml
crates/config-agent/src/: api.rs  app.rs  attribution.rs  config.rs  debounce.rs  diagnose.rs  health.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  publish.rs  query_handler.rs  redaction.rs  spool.rs  tunnel.rs  watcher.rs  yaml_lint.rs
crates/config-agent/tests/: contract_agent_routes.rs  integration_pipeline.rs  integration_spool.rs
crates/config-auth/: Cargo.toml
crates/config-auth/src/: enrollment.rs  lib.rs  policy.rs  tokens.rs
crates/config-auth/tests/: integration_auth.rs
crates/config-cli/: Cargo.toml
crates/config-cli/src/: hosts.rs  main.rs  stat.rs  tail.rs
crates/config-control-plane/: Cargo.toml
crates/config-control-plane/src/: app.rs  auth.rs  config.rs  diff_service.rs  ingest.rs  lib.rs  main.rs  metrics.rs  pg_notify.rs  query.rs  realtime.rs  registry.rs  services.rs  tunnel.rs  ws_ticket.rs
crates/config-control-plane/src/http/: extractors.rs  middleware.rs  routes.rs
crates/config-control-plane/tests/: contract_control_plane.rs  contract_extractors.rs  e2e_agent_to_control_plane.rs  e2e_change_diff.rs  e2e_file_query.rs  e2e_websocket.rs  integration_ingest.rs  integration_realtime.rs  integration_subscription_filter.rs
crates/config-control-plane/tests/common/: db_helpers.rs  mod.rs
crates/config-diff/: Cargo.toml
crates/config-diff/src/: difftastic.rs  lib.rs  summary.rs
crates/config-shared/: Cargo.toml
crates/config-shared/src/: attribution.rs  errors.rs  events.rs  ids.rs  lib.rs  paths.rs  queries.rs  snapshots.rs  validation.rs
crates/config-snapshot/: Cargo.toml
crates/config-snapshot/src/: hash.rs  lib.rs  retention.rs  store.rs
crates/config-storage/: Cargo.toml
crates/config-storage/migrations/: 0001_init.sql  0002_add_diff_render.sql  0003_add_canonical_path.sql  0004_add_workflows.sql  0005_workflow_base_branch.sql  0006_workflow_reviewers.sql  0007_add_event_pr_fields.sql  0008_better_auth_tables.sql  0010_last_login_tracking.sql  0011_change_events_initial_snapshot.sql  0012_users_email_notnull.sql  0013_audit_events.sql  0014_change_event_notify.sql
crates/config-storage/src/: db.rs  lib.rs  models.rs  tx.rs
crates/config-storage/src/repositories/: change_events.rs  file_queries.rs  files.rs  hosts.rs  mod.rs  snapshots.rs  watch_roots.rs  workflows.rs
crates/config-storage/tests/: integration_change_events_repo.rs  integration_derive_host_status.rs
crates/config-transport/: Cargo.toml
crates/config-transport/src/: agent_query.rs  client.rs  idempotency.rs  lib.rs  tunnel.rs  websocket.rs
crates/config-workflow/: Cargo.toml
crates/config-workflow/src/: content_resolver.rs  executor.rs  git_ops.rs  github_client.rs  lib.rs  models.rs
deploy/dev/: agent.toml  control-plane.toml
deploy/k8s/: control-plane.yaml  dashboard.yaml  ingress.yaml  namespace.yaml  postgres.yaml
deploy/systemd/: config-agent.service  config-control-plane.service
docker/: Dockerfile.agent  Dockerfile.agent.rocky8  Dockerfile.agent.rocky9  Dockerfile.control-plane  Dockerfile.control-plane.rocky8  Dockerfile.control-plane.rocky9  Dockerfile.dashboard  nginx.conf
fixtures/diff-cases/: test.yaml
fixtures/diff-cases/test/: diff-temp.yaml
fixtures/yaml/: app.yaml  sample-config.yaml  sample-temp.yaml
scripts/: archive-and-wipe.ps1  archive-and-wipe.sh  build-linux.sh  create-agent-token.sh  query-db.ps1  seed-dev.sh  setup-dev.ps1  smoke-test.sh
web/dashboard/: Cargo.toml  Trunk.toml  index.html
web/dashboard/src/: api.rs  app.rs  auth.rs  main.rs  models.rs  storage.rs  url.rs  ws.rs
web/dashboard/src/components/: diff_viewer.rs  event_list.rs  file_compare.rs  filters.rs  login.rs  mod.rs  selection_bar.rs  workflow_panel.rs
web/dashboard/styles/: main.css
