[workspace]
members = [
  "crates/config-shared",
  "crates/config-agent",
  "crates/config-control-plane",
  "crates/config-storage",
  "crates/config-transport",
  "crates/config-diff",
  "crates/config-snapshot",
  "crates/config-auth",
  "crates/config-cli",
  "crates/config-workflow",
  "web/dashboard",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.2"
authors = ["hsetially"]
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
blake3 = "1"
bytes = "1"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
config = "0.14"
futures = "0.3"
globset = "0.4"
hostname = "0.4"
http = "1"
notify = "6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono", "json"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
watchexec = "8"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.24"
assert-json-diff = "2"
http-body-util = "0.1"
git2 = "0.20"
