[package]
name = "config-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
config-shared = { path = "../config-shared" }
config-transport = { path = "../config-transport" }