[package]
name = "config-snapshot"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
camino.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir = "2"
config-shared = { path = "../config-shared" }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
