[package]
name = "config-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
config-shared = { path = "../config-shared" }

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
tempfile = "3"
tokio.workspace = true
