[package]
name = "config-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlSelectElement", "HtmlTextAreaElement", "ScrollToOptions", "ScrollBehavior", "Element"] }
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["websocket"] }
futures = { workspace = true }
similar = { version = "2", features = ["wasm32_web_time"] }
base64 = "0.22"